@@ -1,13 +1,17 @@
 package com.clintonbrito.crudspring.service;
 
 import com.clintonbrito.crudspring.dto.CourseDTO;
+import com.clintonbrito.crudspring.dto.CoursePageDTO;
 import com.clintonbrito.crudspring.dto.mapper.CourseMapper;
 import com.clintonbrito.crudspring.exception.RecordNotFoundException;
 import com.clintonbrito.crudspring.model.Course;
 import com.clintonbrito.crudspring.repository.CourseRepository;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Max;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Positive;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
@@ -25,12 +29,18 @@ public class CourseService {
         this.courseMapper = courseMapper;
     }
 
-    public List<CourseDTO> list() {
-        return courseRepository.findAll().stream()
-            .map(courseMapper::toDTO)
-//            .collect(Collectors.toList());
-            .toList();
+    public CoursePageDTO list(int page, @Positive @Max(100) int pageSize) {
+        Page<Course> pageCourse = courseRepository.findAll(PageRequest.of(page, pageSize));
+        List<CourseDTO> courses = pageCourse.get().map(courseMapper::toDTO).toList();
+        return new CoursePageDTO(courses, pageCourse.getTotalElements(), pageCourse.getTotalPages());
     }
+
+//    public List<CourseDTO> list() {
+//        return courseRepository.findAll().stream()
+//            .map(courseMapper::toDTO)
+////            .collect(Collectors.toList());
+//            .toList();
+//    }
 
     public CourseDTO findById(@NotNull @Positive Long id) {
         return courseRepository.findById(id)
